@@ -2,15 +2,21 @@ package com.gabriel.orders.adapter.driven.api.mapper;
 
 import com.gabriel.core.domain.model.RoleAuthority;
 
+import java.time.Instant;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class PermissionMapper {
 
-    public static List<RoleAuthority> toRoleAuthorities(com.gabriel.specs.permissions.RoleAuthoritiesResponse response) {
-        return response.getRoleAuthoritiesList().stream()
-            .map(roleAuthority -> new RoleAuthority(
-                roleAuthority.getRole(),
-                roleAuthority.getAuthoritiesList()))
-            .toList();
+    public static List<RoleAuthority> toRoleAuthorities(com.gabriel.specs.permissions.PermissionResponse response) {
+        return response.getItemsList().stream()
+            .map(item -> new RoleAuthority(
+                item.getRole(),
+                item.getAuthority(),
+                Instant.from(Instant.ofEpochSecond(
+                    item.getLastUpdated().getSeconds(),
+                    item.getLastUpdated().getNanos()))
+            ))
+            .collect(Collectors.toList());
     }
 }
